fix backgrounds and element contrast

--- a/Client/src/FeatureTests/PuzzleTest.css
+++ b/Client/src/FeatureTests/PuzzleTest.css
@@ -40,12 +40,20 @@
 .describe-puzzle{
     text-align: center;
     align-self:flex-start;
+    background: transparent;
 }
 
 h1{
     text-align: center;
     display: flex;
     justify-content: center;
+    background: transparent;
+}
+h3{
+ background: transparent;
+}
+p{
+    background: transparent;
 }
 
 .test-puzzle-input{
@@ -82,6 +90,7 @@ h1{
     height: 50px;
     padding: 5px;
     border-radius: 5px;
+    color: white;
 }
 
 /* ------------------------------------------------ */
