--- a/Client/src/FeatureTests/miniSudokuGrid.css
+++ b/Client/src/FeatureTests/miniSudokuGrid.css
@@ -37,6 +37,7 @@ border-radius: 5px;
 .tile {
     width: 59px;
     height: 59.5px;
+    color: white;
     border: 0.1px solid rgb(255, 254, 255);
     box-shadow: inset 10px 10px 10px rgba(1, 1, 39, 0.764),
                 inset -10px -10px 10px rgb(38, 38, 118);
@@ -85,8 +86,9 @@ button {
 
 /* --------Clues - cannot be edited---------- */
 .original-nums{
- background-color: rgb(222, 222, 222);
- border: 2px solid gray;
+ background-color: rgb(0, 0, 0);
+ /* border: 2px solid rgb(248, 56, 255); */
+ border: none;
  transition: 0.4s;
 }
 
@@ -98,14 +100,16 @@ button {
 .selected {
     background: none; 
     background-color:radial-gradient(circle, rgb(8, 8, 64) 0%, rgb(115, 115, 245) 82%, rgb(213, 214, 235) 100%) !important;
-    color: rgb(247, 4, 255);
+    color: rgb(248, 56, 255);
     box-shadow: -3px -3px 6px 0.5px #e29aff,
                 5px 5px 10px 1px rgb(11, 11, 92) ,
+                0 0 2px 2px rgb(71, 3, 73),
                 inset 2px 2px 5px 0.1px rgb(254, 219, 255),
                 inset 3px 3px 5px 0.2px rgb(249, 170, 252),
                 inset 1px 1px 8px 1px rgb(224, 7, 232),
                 inset 5px 5px 15px 1px rgb(224, 7, 232);
     border-radius: 5px;
+    border: 0.5px solid black;
 }
 
 
@@ -117,7 +121,8 @@ button {
 
 /* --------feature/button functions---------- */
 .incorrect-answer {
-    color: red;
+    color: black;
+    background: radial-gradient(circle, rgb(250, 48, 48) 0%, rgb(252, 245, 245) 82%, rgb(213, 214, 235) 100%) !important;
 }
 
 /* .tile-one {
